# project-beta-frontend

./: .dockerignore  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .swcrc  .worktree-info.md  BUILD.bazel  CLAUDE.md  Dockerfile  README.md  README_TEMP.md  WORKTREE_STATUS.md  claude.md  defs.bzl  docker-compose.e2e.yml  fix-entities.sh  index.html  lint.bzl  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-results.json  tsconfig.json  vite.config.js  vite.config.test.js  vitest.config.js
public/: BUILD.bazel  manifest.json  zip_codes.json
src/: App.css  App.d.ts  App.js  App.js.map  App.test.js  App.test.tsx  App.tsx  AppRoutes.js  AppRoutes.js.map  AppRoutes.tsx  BUILD.bazel  firebase.js  firebase.js.map  firebase.ts  index.css  index.html  index.js  index.js.map  index.tsx  reportWebVitals.js  reportWebVitals.js.map  setupTests.js  setupTests.js.map  setupTests.ts  tsconfig.json
src/api/: BUILD.bazel  api-integrations.d.ts  api-integrations.js  api-integrations.js.map  api-integrations.test.ts  api-integrations.ts  brandKnowledgeApi.d.ts  brandKnowledgeApi.js  brandKnowledgeApi.js.map  brandKnowledgeApi.ts  config.d.ts  config.js  config.js.map  config.test.ts  config.ts  contentGenerationApi.d.ts  contentGenerationApi.js  contentGenerationApi.js.map  contentGenerationApi.test.js  contentGenerationApi.test.js.map  contentGenerationApi.test.ts  contentGenerationApi.ts  costOptimizationApi.d.ts  costOptimizationApi.js  costOptimizationApi.js.map  costOptimizationApi.ts  index.js  index.ts  performanceApi.d.ts  performanceApi.js  performanceApi.js.map  performanceApi.test.ts  performanceApi.ts  useApi.d.ts  useApi.js  useApi.js.map  useApi.test.ts  useApi.ts
src/api/v2/: BUILD.bazel  brand-api.d.ts  brand-api.js  brand-api.js.map  brand-api.ts  campaign-api.d.ts  campaign-api.js  campaign-api.js.map  campaign-api.ts  index.d.ts  index.js  index.js.map  index.ts  proto-loader.d.ts  proto-loader.js  proto-loader.js.map  proto-loader.ts  proto-service.d.ts  proto-service.js  proto-service.js.map  proto-service.test.ts  proto-service.ts
src/app/: App.d.ts  App.js  App.js.map  App.test.js  App.test.js.map  App.test.tsx  App.tsx  AppRoutes.d.ts  AppRoutes.js  AppRoutes.js.map  AppRoutes.tsx
src/assets/data/: zip_codes.json
src/components/: ApproveButton.tsx  AudienceDetails.d.ts  AudienceDetails.js  AudienceDetails.js.map  AudienceDetails.test.tsx  AudienceDetails.tsx  BUILD.bazel  BrandDataLoader.d.ts  BrandDataLoader.js  BrandDataLoader.js.map  BrandDataLoader.tsx  BrandDetailsEditBlock.d.ts  BrandDetailsEditBlock.js  BrandDetailsEditBlock.js.map  BrandDetailsEditBlock.tsx  BrandDetailsReview.js  BrandDetailsReview.js.map  BrandDetailsReview.tsx  BrandProfileEdit.d.ts  BrandProfileEdit.js  BrandProfileEdit.js.map  BrandProfileEdit.tsx  CampaignBriefTimingBlock.tsx  CampaignObjective.tsx  CampaignSchedule.tsx  CardsSection.d.ts  CardsSection.js  CardsSection.js.map  CardsSection.test.tsx  CardsSection.tsx  ChipComponent.tsx  ColorSpan.tsx  ConnectToInstagram.d.ts  ConnectToInstagram.js  ConnectToInstagram.js.map  ConnectToInstagram.test.tsx  ConnectToInstagram.tsx  EditProfileInput.tsx  ErrorDisplay.tsx  ExportCompleteDialog.d.ts  (+63 more)
src/components/Forms/: AudienceForm.d.ts  AudienceForm.js  AudienceForm.js.map  AudienceForm.tsx  BrandKnowledgeForm.js  BrandKnowledgeForm.js.map  (+20 more)
src/context/: BUILD.bazel  BrandContext.d.ts  BrandContext.js  CampaignContext.d.ts  CampaignContext.js  CampaignContext.js.map  CampaignContext.tsx  UsersContext.d.ts  UsersContext.js  UsersContext.js.map  UsersContext.tsx  appContext.d.ts  appContext.js  appContext.js.map  appContext.tsx
src/helpers/: BUILD.bazel  analytics.d.ts  analytics.js  analytics.js.map  analytics.test.ts  analytics.ts  calculateTiming.d.ts  calculateTiming.js  calculateTiming.js.map  calculateTiming.test.ts  calculateTiming.ts  convertToChips.d.ts  convertToChips.js  convertToChips.js.map  convertToChips.test.ts  convertToChips.ts  debounce.ts  exportUtils.d.ts  exportUtils.js  exportUtils.js.map  exportUtils.test.ts  exportUtils.ts  fetchPrompts.d.ts  fetchPrompts.js  fetchPrompts.js.map  fetchPrompts.test.ts  fetchPrompts.ts  fetchWebsiteData.d.ts  fetchWebsiteData.js  fetchWebsiteData.js.map  fetchWebsiteData.test.ts  fetchWebsiteData.ts  formatters.d.ts  formatters.js  formatters.js.map  formatters.test.ts  formatters.ts  getServiceURL.d.ts  getServiceURL.js  getServiceURL.js.map  (+28 more)
src/hooks/: BUILD.bazel  useFetchThreadMessages.d.ts  useFetchThreadMessages.js  useFetchThreadMessages.js.map  useFetchThreadMessages.test.ts  useFetchThreadMessages.ts  useFetchUserData.d.ts  useFetchUserData.js  useFetchUserData.js.map  useFetchUserData.ts  useV2Api.d.ts  useV2Api.js  useV2Api.js.map  useV2Api.test.ts  useV2Api.ts
src/interfaces/: RequestInput.d.ts  RequestInput.js  RequestInput.js.map  RequestInput.tsx
src/lib/: firebase.d.ts  firebase.js  firebase.js.map  firebase.ts
src/pages/: AuthActions.tsx  BUILD.bazel  BrandKnowledgePage.d.ts  BrandKnowledgePage.js  BrandKnowledgePage.js.map  BrandKnowledgePage.tsx  Campaign.tsx  CampaignContent.test.tsx  CampaignContent.tsx  CampaignContentPage.tsx  Dashboard.test.tsx  Dashboard.tsx  DisplayContent.d.ts  DisplayContent.js  DisplayContent.js.map  DisplayContent.tsx  LandingPage.d.ts  LandingPage.js  LandingPage.js.map  LandingPage.tsx  ManageUsers.d.ts  ManageUsers.js  ManageUsers.js.map  ManageUsers.tsx  NewCampaigns.tsx  Onboard.d.ts  Onboard.js  Onboard.js.map  Onboard.tsx  PrivacyPolicy.d.ts  PrivacyPolicy.js  PrivacyPolicy.js.map  PrivacyPolicy.tsx  PromptSettings.d.ts  PromptSettings.js  PromptSettings.js.map  PromptSettings.tsx  Signup.tsx  UserDataPage.d.ts  UserDataPage.js  (+6 more)
src/types/: ContentLibrary.d.ts  ContentLibrary.js  ContentLibrary.js.map  ContentLibrary.ts  global.d.ts  swiper.d.ts
src/utils/: BUILD.bazel  authFetch.ts  errorBoundary.d.ts  errorBoundary.js  errorBoundary.js.map  errorBoundary.test.js  errorBoundary.test.js.map  errorBoundary.test.tsx  errorBoundary.tsx
(+1029 files in other folders)
