load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//frontend:defs.bzl", "ASSET_PATTERNS", "SRC_PATTERNS", "TEST_PATTERNS", "TRANSPILER")
load("//frontend:lint.bzl", "eslint_test")

# gazelle:js_root

js_library(
    name = "assets",
    srcs = glob(
        ASSET_PATTERNS,
        allow_empty = True,
    ),
    visibility = ["//frontend:__subpackages__"],
)

# Simple source files target for Vite (no TypeScript compilation)
js_library(
    name = "src",
    srcs = glob(
        include = SRC_PATTERNS,
        exclude = TEST_PATTERNS,
    ),
    data = [
        "index.html",
        ":assets",
    ],
    visibility = ["//frontend:__subpackages__"],
    deps = [
        "//frontend/src/api:api_files",
        "//frontend/src/components:components_files",
        "//frontend/src/components/campaign:campaign_files",
        "//frontend/src/components/dashboard:dashboard_files",
        "//frontend/src/components/shared:shared_files",
        "//frontend/src/context:context_files",
        "//frontend/src/helpers:helper_files",
        "//frontend/src/hooks:hooks_files",
        "//frontend/src/pages:pages_files",
        "//frontend/src/utils:utils_files",
    ],
)

js_library(
    name = "firebase",
    srcs = ["firebase.ts"],
    visibility = ["//visibility:public"],
)

# Test target using Vitest
load("//:vitest.bzl", "vitest")

vitest(
    name = "test",
    config = "//frontend:vitest_config_js",
    deps = [
        ":firebase",
        ":src",
        "//frontend:node_modules/@emotion/react",
        "//frontend:node_modules/@emotion/styled",
        "//frontend:node_modules/@mui/icons-material",
        "//frontend:node_modules/@mui/material",
        "//frontend:node_modules/@testing-library/jest-dom",
        "//frontend:node_modules/@testing-library/react",
        "//frontend:node_modules/@testing-library/user-event",
        "//frontend:node_modules/@types/react",
        "//frontend:node_modules/@types/react-dom",
        "//frontend:node_modules/@vitejs/plugin-react",
        "//frontend:node_modules/firebase",
        "//frontend:node_modules/moment-timezone",
        "//frontend:node_modules/posthog-js",
        "//frontend:node_modules/react",
        "//frontend:node_modules/react-dom",
        "//frontend:node_modules/react-icons",
        "//frontend:node_modules/react-router-dom",
        "//frontend:node_modules/universal-cookie",
        "//frontend/src/api:api_files",
        "//frontend/src/components:components_test_files",
        "//frontend/src/components/campaign:campaign_test_files",
        "//frontend/src/components/dashboard:dashboard_test_files",
        "//frontend/src/components/shared:shared_files",
        "//frontend/src/context:context_files",
        "//frontend/src/helpers:helper_files",
        "//frontend/src/hooks:hooks_files",
        "//frontend/src/pages:pages_test_files",
        "//frontend/src/utils:utils_files",
    ],
)

# ts_project(
#     name = "src_typecheck",
#     # By default, this recursively walks through the hierarchy, and includes all typescript (ts, tsx) files.
#     srcs = glob(
#         include = SRC_PATTERNS,
#         exclude = TEST_PATTERNS,
#     ),
#     data = [
#         "index.html",
#         ":assets",
#     ],
#     declaration = True,
#     out_dir = "dist",
#     resolve_json_module = True,
#     source_map = True,
#     transpiler = TRANSPILER,
#     tsconfig = "//frontend:tsconfig",
#     visibility = ["//frontend:__subpackages__"],
#     deps = [
#         # TODO(ndn): Update to use a property from the toplevel build to allow avoiding a repeat of the modules here.
#         "//frontend:node_modules/@emotion/react",
#         "//frontend:node_modules/@emotion/styled",
#         "//frontend:node_modules/@types/react",
#         "//frontend:node_modules/@types/react-dom",
#         "//frontend:node_modules/@types/react-router-dom",
#         "//frontend:node_modules/autoprefixer",
#         "//frontend:node_modules/css-loader",
#         "//frontend:node_modules/firebase",
#         "//frontend:node_modules/flowbite-react",
#         "//frontend:node_modules/framer-motion",
#         "//frontend:node_modules/next",
#         "//frontend:node_modules/postcss",
#         "//frontend:node_modules/postcss-import",
#         "//frontend:node_modules/postcss-loader",
#         "//frontend:node_modules/rc-steps",
#         "//frontend:node_modules/react",
#         "//frontend:node_modules/react-colorful",
#         "//frontend:node_modules/react-datepicker",
#         "//frontend:node_modules/react-dom",
#         "//frontend:node_modules/react-hook-form",
#         "//frontend:node_modules/react-icons",
#         "//frontend:node_modules/react-player",
#         "//frontend:node_modules/react-router-dom",
#         "//frontend:node_modules/react-tailwindcss-datepicker",
#         "//frontend:node_modules/react-error-boundary",
#         "//frontend:node_modules/tailwindcss",
#         "//frontend:node_modules/vite",
#         "//frontend:node_modules/vite-plugin-svgr",
#         "//frontend:node_modules/web-vitals",
#         "//frontend:node_modules/dayjs",
#         "//frontend:node_modules/file-saver",
#         "//frontend:node_modules/moment-timezone",
#         "//frontend:node_modules/@mui/material",
#         "//frontend:node_modules/@mui/icons-material",
#         "//frontend:node_modules/@mui/x-date-pickers",
#         "//frontend:node_modules/@mui/joy",
#         "//frontend:node_modules/axios",
#         "//frontend:node_modules/jszip",
#         "//frontend:node_modules/jspdf",
#         "//frontend:node_modules/docx",
#         "//frontend:node_modules/emoji-regex",
#         "//frontend:node_modules/react-big-calendar",
#         "//frontend:node_modules/moment",
#         "//frontend:node_modules/universal-cookie",
#         "//frontend:node_modules/posthog-js",
#         "//frontend:node_modules/react-json-view",
#         "//frontend:node_modules/react-pick-color",
#         "//frontend:node_modules/color-convert",
#         "//frontend:node_modules/is-url",
#         "//frontend:node_modules/pdfjs-dist",
#         "//frontend:node_modules/mui-chips-input",
#         # "//frontend:node_modules/swiper",  # TODO: Fix Bazel target generation
#         "//frontend:node_modules/@types/node",
#         "//frontend:node_modules/@types/file-saver",
#         # "//frontend:node_modules/@splidejs/react-splide",
#         "//protos:brand_ts_proto",
#         "//protos:campaign_ts_proto",
#         "//protos:marketing_manager_credentials_ts_proto",
#         "//protos:marketing_manager_ts_proto",
#         "//protos:marketing_material_ts_proto",
#     ],
# )
