load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "api_files",
    srcs = glob(
        [
            "*.tsx",
            "*.ts",
        ],
        allow_empty = True,
    ),
    visibility = ["//frontend/src:__pkg__"],
    deps = [
        "//frontend/src/api/v2",  # Include V2 API module
    ],
)

# Cost Optimization API
js_library(
    name = "cost_optimization_api",
    srcs = ["costOptimizationApi.ts"],
    visibility = ["//visibility:public"],
)

# V2 API Module
alias(
    name = "v2",
    actual = "//frontend/src/api/v2",
    visibility = ["//visibility:public"],
)

# Test files are included in the main test target via glob patterns
