load("@aspect_rules_js//js:defs.bzl", "js_library")

package(default_visibility = ["//frontend:__subpackages__"])

js_library(
    name = "v2",
    srcs = glob(["*.ts"]),
    deps = [
        "//frontend/src/helpers:helper_files",
        # Proto files are loaded dynamically at runtime via protobuf.js
        # No build-time dependency needed
    ],
)