load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "campaign_test_files",
    srcs = [
        "CampaignSetupCompleteDialog.test.tsx",
        "CampaignSetupCompleteDialog.tsx",
        "ContentPreviewPanel.test.tsx",
        "ContentPreviewPanel.tsx",
        "ModifyPrompt.test.tsx",
        "ModifyPrompt.tsx",
        "PaginationImage.tsx",
        "SmartSchedulingTimeline.test.tsx",
        "SmartSchedulingTimeline.tsx",
        "SocialMediaPost.test.tsx",
        "SocialMediaPost.tsx",
        "HITLReview.test.tsx",
        "HITLReviewPanel.tsx",
        "QualityGatePanel.tsx",
        "ContentComparisonModal.tsx",
        "HITLReviewDemo.tsx",
    ],
    visibility = ["//frontend/src:__pkg__"],
)

js_library(
    name = "campaign_files",
    srcs = glob(
        [
            "**/*.tsx",
            "**/*.ts",
        ],
        allow_empty = True,
    ),
    visibility = ["//frontend/src:__pkg__"],
)
